--- a/src/main/resources/com/emenda/klocwork/config/KlocworkXSyncConfig/help-statusFilter.html
+++ b/src/main/resources/com/emenda/klocwork/config/KlocworkXSyncConfig/help-statusFilter.html
@@ -1,5 +1,3 @@
 <div>
-  Specify the statuses that you would like to synchronise. Typically "Fix in
-  Later Release" is used as the "baseline" status and as such, not
-  synchronising this status will lead to major performance improvements
+  Specify whether to synchronise issues with status "Filter"
 </div>
